Bufix oa. Signen setup exe's