@@ -12,13 +12,16 @@
     <module>library</module>
     <module>ing2ofx</module>
     <module>garminSummary</module>
+    <module>gnucashcharts</module>
     <module>replaceTool</module>
     <module>reformat</module>
-    <module>gnucashcharts</module>
     <module>ofxviewer</module>
+    <module>ios_password</module>
   </modules>
   
   <properties>
+    <project.inceptionYear>2025</project.inceptionYear>
+
     <kweeLibrary.version>1.1.0.3</kweeLibrary.version>
     <kweeIng2Ofx.version>1.1.0.3</kweeIng2Ofx.version> 
 
@@ -47,7 +50,7 @@
   	<assertj-swing.version>3.17.1</assertj-swing.version>
   	<assertj-swing-test.version>3.17.1</assertj-swing-test.version>
   
-    <launch4j-maven-plugin.version>2.5.2</launch4j-maven-plugin.version>
+    <launch4j-maven-plugin.version>2.6.0</launch4j-maven-plugin.version>
     <jsign-maven-plugin.version>7.0</jsign-maven-plugin.version>
 	<versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
     <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
@@ -57,8 +60,8 @@
     <javafx-graphics.version>23.0.1</javafx-graphics.version>
     <javafx-controls.version>23.0.1</javafx-controls.version>
 
-    <com-webcohesion-ofx4j.version>1.38</com-webcohesion-ofx4j.version>
-    <slf4j.version>2.0.16</slf4j.version>
+    <com-webcohesion-ofx4j.version>1.39-SNAPSHOT</com-webcohesion-ofx4j.version>
+    <slf4j.version>2.0.9</slf4j.version>
     <log4j-slf4j-impl.version>2.20.0</log4j-slf4j-impl.version>
     <org-apache-poi-poi.version>5.4.0</org-apache-poi-poi.version>
     <org-apache-poi-ooxml.version>5.4.0</org-apache-poi-ooxml.version>
@@ -115,6 +118,11 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
+      <version>${javafx-controls.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
       <version>${javafx-controls.version}</version>
     </dependency>
     <!-- AssertJ Swing -->
@@ -192,6 +200,17 @@
           </executions>    
         </plugin>
         <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.8</version>
+          <configuration>
+            <mainClass>your.main.Class</mainClass>
+            <options>
+              <option>--enable-native-access=ALL-UNNAMED</option>
+            </options>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
@@ -208,6 +227,7 @@
           <version>${versions-maven-plugin.version}</version> <!-- Controleer voor de laatste versie -->
         </plugin>
     </plugins>
+   <!--   <directory>f:/temp/local_target/${project.artifactId}</directory>   -->
   </build>
   
   <reporting>
